# osx-echo

./: .env.example  .gitignore  LICENSE  README.md  config.json  pyproject.toml  run
src/osx_echo/: __main__.py  app.py  config.py  constants.py  dictation_app.py  listeners.py  recorder.py  startup.py  transcriber.py
